Add Performance tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,8 @@ install:
   - composer install --prefer-source
 
 script: phpunit
+
+# do not run performance tests as they take too long to run and are killed by Travis
+branches:
+  except:
+    - perf-tests
